# build-tools

./: CMakeLists.txt  ChangeLog  README.md  packaging.conf  website.config
.github/workflows/: packaging.yml
ci/: build-tool  ci-setup  get-dependencies
debian/: changelog  control  copyright  td-build-tool.install  td-build-tool.lintian-overrides  td-build-tool.manpages  td-version-bump.install  td-version-bump.manpages  watch
debian/source/: lintian-overrides
debian/tests/: simple-test
debian/upstream/: metadata
rpm/: td-build-tools.spec
src/: CMakeLists.txt  build-deb  build-tool  build-tool.1  build-tool.bash-completion  check-manpage  check-tarball-vs-git  check-with-mypy  clean-deb  cmake-make-tarball  cmake-print-project-version  create-debian-rfs  fetch-debian-changelog  flush-pbuilder  initialise-pbuilder  make-deb  make-diff  make-ppa  make-srpm  make-weekly-tags  md2html  merge-debian-changelogs  options-from-manpage  osc-update  pbuilderrc  run-cmake-lint  run-mypy  run-shellcheck  shebangfix  sort-pkg-plist  update-freebsd-distinfo  update-freebsd-port  update-lsm-entry  update-manpage-date  update-po-file  update-tools  version-bump  version-bump.1  version-bump.bash-completion
src/ci/: ci-build  ci-install  ci-setup  ci-test  get-dependencies
src/deprecated/: build-deb  build-rpm  check-tarball-vs-git  clean-deb  fetch-debian-changelog  filter-debian-changelog  make-deb  make-diff  make-srpm  make-upstream-package  merge-debian-changelogs  update-freebsd-distinfo
src/docker/: Dockerfile.td-build-tool-mock-base  Dockerfile.td-build-tool-mock-builder  Dockerfile.td-build-tool-pbuilder-base  Dockerfile.td-build-tool-pbuilder-builder  Dockerfile.td-build-tools-pbuilder  Dockerfile.ubuntu-pbuilder  build-containers  run-test
src/logo/: Logo-BuildTools.dia  make-logo-figures
src/test/: build-and-run-test  deb-status
src/workflow/: freebsd.yml  linux.yml  multiarch.yml  packaging.yml
